--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -10,8 +10,13 @@ anyhow = { workspace = true}
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 sqlx = { workspace = true }
-thiserror = { workspace = true }
+thiserror.workspace = true
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 axum = { workspace = true }
+chrono = { version = "0.4.38", features = ["serde"] }
+argon2 = { version = "0.5.3", features = ["std"] }
+
+[dev-dependencies]
+sqlx-db-tester = "0.4.2"
