--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -13,10 +13,13 @@ sqlx = { workspace = true }
 thiserror.workspace = true
 tokio = { workspace = true }
 tracing = { workspace = true }
+serde_json = "1.0.122"
 tracing-subscriber = { workspace = true }
 axum = { workspace = true }
 chrono = { version = "0.4.38", features = ["serde"] }
 argon2 = { version = "0.5.3", features = ["std"] }
+jwt-simple = "0.12.9"
 
 [dev-dependencies]
-sqlx-db-tester = "0.4.2"
+http-body-util = "0.1.2"
+sqlx-db-tester = "0.4.0"
